--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kwikdesk-partner-node",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "KwikDesk Partner API Node Client Library",
-  "main": "lib/client.js",
+  "main": "lib/main.js",
   "scripts": {
     "test": "mocha test/main.test.js"
   },
@@ -20,15 +20,6 @@
   "bugs": {
     "url": "https://github.com/chico/kwikdesk-partner-node/issues"
   },
-  "files": [
-    "README.md",
-    "LICENSE",
-    "lib/main.js",
-    "lib/error.js",
-    "lib/message.js",
-    "lib/search.js",
-    "test/main.test.js"
-  ],
   "dependencies": {
     "request": "~2.34.0"
   }
